test/classes/hilde/recordInheritance.good
recordInheritance.chpl:6: error: inheritance is not currently supported for records
recordInheritance.chpl:6: note: S declared as a record here
